--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,18 +14,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H your.server.ip.or.hostname >> ~/.ssh/known_hosts
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up gcloud CLI
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: your-gcp-project-id
 
       - name: Install Ansible
         run: sudo apt update && sudo apt install -y ansible
+
+      - name: Create Ansible Vault password file
+        run: echo "${{ secrets.ANSIBLE_VAULT_PASSWORD }}" > ~/.ansible_vault_pass
 
       - name: Deploy via Ansible
         env:
           API_KEY: ${{ secrets.API_KEY }}
         run: |
-          ansible-playbook playbook.yml -i inventories/production/hosts.ini -e api_key=${API_KEY}
+          ansible-playbook playbook.yml \
+            -i inventories/production/hosts.ini \
+            --vault-password-file ~/.ansible_vault_pass \
+            -e api_key=${API_KEY}
+
+      - name: Clean up Vault password file
+        run: rm -f ~/.ansible_vault_pass
