--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
-name: Deploy to Hetzner
+name: Deploy to GCP
 
 on:
   push:
     branches:
-      - main  # Adjust this if your main branch has a different name
-  workflow_dispatch:  # Allows manual triggering of the workflow
+      - main
+  workflow_dispatch:
 
 jobs:
   deploy:
