--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy to GCP
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'  # Triggers on tags like v1.0.0, v2.1.3, etc.
   workflow_dispatch:
 
 jobs:
@@ -17,27 +17,24 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v1
         with:
-          project_id: your-gcp-project-id
+          project_id: ${{ secrets.GCP_PROJECT }}
 
-      - name: Install Ansible
-        run: sudo apt update && sudo apt install -y ansible
-
-      - name: Create Ansible Vault password file
-        run: echo "${{ secrets.ANSIBLE_VAULT_PASSWORD }}" > ~/.ansible_vault_pass
+      - name: Install Ansible and dependencies
+        run: |
+          sudo apt update && sudo apt install -y ansible python3-pip
+          pip3 install --user --upgrade ansible
+          ansible-galaxy collection install google.cloud
 
       - name: Deploy via Ansible
         env:
           API_KEY: ${{ secrets.API_KEY }}
+          GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
+          GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ env.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
-          ansible-playbook playbook.yml \
-            -i inventories/production/hosts.ini \
-            --vault-password-file ~/.ansible_vault_pass \
-            -e api_key=${API_KEY}
-
-      - name: Clean up Vault password file
-        run: rm -f ~/.ansible_vault_pass
+          ansible-playbook playbook.yml -i inventory/gcp_compute.yaml
