--- a/roles/rag_server/tasks/main.yml
+++ b/roles/rag_server/tasks/main.yml
@@ -20,8 +20,12 @@
 
 - name: Add Docker repository
   apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
     state: present
+
+- name: Update apt cache after adding Docker repo
+  apt:
+    update_cache: yes
 
 - name: Install Docker CE and related packages
   apt:
@@ -47,8 +51,8 @@
   file:
     path: "{{ rag_project_dir }}"
     state: directory
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
+    owner: "{{ lookup('env', 'USER') }}"
+    group: "{{ lookup('env', 'USER') }}"
 
 - name: Clone RAG project repository
   git:
@@ -57,25 +61,9 @@
     version: "main"
   when: rag_repo_url is defined
 
-- name: Store API key in a temporary file
-  copy:
-    content: "{{ api_key }}"
-    dest: "/tmp/api_key.txt"
-    mode: "0600"
-  delegate_to: localhost
-  run_once: true
-
 - name: Update GCP instance metadata with API key
-  delegate_to: localhost
   command: >
-    gcloud compute instances add-metadata {{ gcp_instance_name }}
+    gcloud compute instances add-metadata {{ inventory_hostname }}
     --zone {{ gcp_instance_zone }}
-    --metadata-from-file=API_KEY=/tmp/api_key.txt
-  run_once: true
-
-- name: Remove temporary API key file
-  file:
-    path: "/tmp/api_key.txt"
-    state: absent
+    --metadata API_KEY={{ api_key }}
   delegate_to: localhost
-  run_once: true
