--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install Ansible and dependencies
         run: |
-          sudo apt update && sudo apt install -y ansible python3-pip
+          sudo apt update && sudo apt install -y ansible python3-pip docker.io
           pip3 install --user --upgrade ansible
           ansible-galaxy collection install google.cloud
 
